Format all Java code in backend/crm with google-java-format
Co-authored-by: fit2-zhao <70558837+fit2-zhao@users.noreply.github.com>